Zmienione ekrany powitania, logowania i rejestracji. Rozpoczęta edycja widoków po zalogowaniu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Restauracja</string>
+    <string name="app_name">Nazwa Restauracji</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login_hint">Adres email</string>
@@ -8,4 +8,13 @@
     <string name="register_button">Utwórz konto</string>
     <string name="password_confirm_hint">Ponów hasło</string>
     <string name="button_logout">Wyloguj</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
