--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="menuButtonText">Menu</string>
+    <string name="glownaButtonText">Strona główna</string>
+    <string name="kontoButtonText">Konto</string>
 </resources>
